# ListaIA-2025.1

./: .env.example  .gitignore  API_DOCUMENTATION.md  EXEMPLO_SAIDA.md  INTEGRATION_COMPLETE.md  LLM_INTEGRATION.md  QUICKSTART.md  README.md  Relatório_CRIACAO_FRONTEND.md  SETUP.md  STRUCTURE.md  TUTORIAL.md  api.py  package-lock.json  package.json  pyproject.toml  run.py  start.bat  start.sh  test_system.py
app/: layout.tsx
app/api/recomendacao/: route.ts
backend/: README.md  __init__.py  config.py  dspy_modules.py  llm.py  main.py  pratos.csv  regras.csv  sistema_integrado.py  sistema_recomendacao_vinho.py  utils.py  vinhos.csv
components/: Chat.tsx
docs/: ARQUITETURA.md  BUGS_FIXED.md  DEPLOYMENT_GUIDE.md  INDEX.md  PERPLEXITY_MIGRATION.md  QUICK_REFERENCE.md  README.md  RESTRUCTURE_COMPLETE.md
lib/: csv-reader.ts  data.ts  llm.ts
types/: index.ts
